# ME759-2023

./: LICENSE  README.md
Assignments/general/: hw_repos.md  slurm_usage.md
FAQ/: README.md
FAQ/BestPractices/: debugging_on_euler.md  profile_gpu.md  random_numbers.md  software.md  transferring_files.md
FinalProject/: README.md  project-ideas.md
FinalProject/DefaultProjects/: image_processing.md  linear_solvers.md  md5_cracking.md  readme.md
GPU/: CMakeLists.txt  helloWorld.cu  hwCoherency.cu  setArray.cu  stencil1D.cu  threadfenceExample.cu  unifMemBasicPart1.cu  unifMemBasicPart2.cu  unifMemCUDAexPart1.cu  unifMemCUDAexPart2.cu  unifMemCUDAexPart3.cu  vector_addition.cu
GPU/CUB-related/: CMakeLists.txt  deviceReduce.cu  reduceByKey.cu  sortByKey.cu
GPU/kernelWrapper/: CMakeLists.txt  Makefile  kern.cu  kern.h  main.cpp
GPU/threads-multiGPU/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp  problemParams.h  producer.cpp  producer.h
OpenMP/: CMakeLists.txt  affinity.cpp  barrierExample.cpp  collapse.cpp  firstPrivateP0.cpp  firstPrivateP1.cpp  firstPrivateP2.cpp  forLoopEx1.cpp  forLoopEx2.cpp  histoExample.cpp  parallelLoop.cpp  reduceExample.cpp  simdExample.cpp
Scripts/: README.md  cudaHello.cu  hello.cxx  helloSlurm.sh  sampleCompileRun.sh  sampleCudaSlurm.sh
